# chat

./: .gitignore  Makefile
client/: Cargo.toml  Dioxus.toml  index.html  package-lock.json  tailwind.config.js
client/public/: tailwind.css
client/src/: chat.rs  encryption.rs  keys.rs  main.rs  message.rs  sign_in.rs  state.rs  ws.rs
server/: .env  Cargo.toml  docker-compose.yml
server/configuration/: base.yaml  local.yaml
server/migrations/: 20231005200215_chat.down.sql  20231005200215_chat.up.sql
server/src/: configuration.rs  error.rs  lib.rs  main.rs  startup.rs  telemetry.rs
server/src/repository/postgres/: chat.rs  credentials.rs  mod.rs  model.rs  postgres_pool.rs
server/src/repository/redis/: mod.rs  redis_pool.rs  token.rs
server/src/router/: api.rs  error.rs  mod.rs
server/src/router/auth/: dto.rs  handlers.rs  middleware.rs  mod.rs
server/src/router/ws/: handlers.rs
server/src/service/: chat.rs  error.rs  mod.rs
server/src/service/auth/: mod.rs  password.rs  service.rs  tokens.rs
server/tests/fixtures/: members.sql  messages.sql  roms.sql  users.sql
shared/: Cargo.toml
shared/src/domain/: event.rs  mod.rs  utils.rs
shared/src/domain/message/: content.rs  entity.rs  id.rs  mod.rs
shared/src/domain/room/: code.rs  entity.rs  id.rs  mod.rs  name.rs
shared/src/domain/user/: code.rs  email.rs  entity.rs  id.rs  mod.rs  name.rs
