[package]
name = "ui"
version = "0.1.0"
authors = ["Igor Kostiuk <ig.fire@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-web = { version = "0.4" }
dioxus = { version = "0.4" }
dioxus-router = { version = "0.4", features = ["web"] }


serde = "1.0.188"
fermi = "0.4.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.28"
reqwasm = "0.5.0"
futures = "0.3.28"
serde_json = "1.0"
async-rwlock = "1.3.0"
web-sys = { version = "0.3.64", features = ['console'] }
async-std = "1.12.0"
uuid = { version = "1.4.1", features = ["serde", "v4", "js"] }
rand = "0.8.4"
ed25519-dalek = { version = "2.0.0", features = ["rand_core", "pem"] }
base64 = "0.21.4"
secrecy = { version = "0.8", features = ["serde"] }
reqwest = { version = "0.11.8", features = ["json"] }


x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
console_error_panic_hook = "0.1.7"
anyhow = "1.0.75"
chacha20poly1305 = { version = "0.10.1", features = ["alloc"] }
sha2 = "0.10.8"
zeroize = "1.6.0"
curve25519-dalek = "4.1.1"

shared = { path = "../shared" }
chrono = { version = "0.4.26", features = ["serde"] }


# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
gloo-net = "0.4.0"
