[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = { version = "2.0.0", features = ["rand_core", "pem"] }
bincode = "1.3.3"
rand = "0.8.5"
axum = { version = "0.6.20", features = ["headers", "ws", "multipart"] }
axum-extra = { version = "0.8.0", features = ["cookie"] }
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "uuid",
] }
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["io"] }
tower-http = { version = "0.4.4", features = [
    "sensitive-headers",
    "trace",
    "limit",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }
anyhow = "1.0.75"
nutype = { version = "0.3.1", features = ["serde"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.3"
argon2 = { version = "0.5", features = ["std"] }
deadpool-redis = "0.13.0"
base64 = "0.21.4"
config = { version = "0.13", default-features = false, features = ["yaml"] }
serde-aux = "4"
secrecy = { version = "0.8", features = ["serde"] }
tower = { version = "0.4", features = ["util"] }
hyper-tls = "0.5.0"
unicode-segmentation = "1.9.0"
async-trait = "0.1.73"
shared = { path = "../shared" }

[dev-dependencies]
claims = "0.7.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand = "0.8"
fake = "~2.8.0"
mockall = "0.11.4"
serde_json = "1.0"
wiremock = "0.5.19"
jwt-simple = "0.11.7"
