[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.49"
anyhow = "1.0.75"
unicode-segmentation = "1.9.0"
serde = { version = "1.0.188", features = ["derive"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
secrecy = { version = "0.8", features = ["serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
validator = { version = "0.16.1", features = ["derive"] }

[dev-dependencies]
claims = "0.7.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand = "0.8"
fake = "~2.8.0"
serde_json = "1.0"
